add panier  and maj of main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1768,7 +1768,7 @@ a {
         border-bottom-left-radius: 20px;
         border: 2px solid var(--first-color);
         padding: 10px 15px;
-        width: 170px;
+        width: 100px !important;
     }
 
     .body-basket .basket .foot .promo-code .input-button button {
